# UA-Generic-Rest-API

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: run-tests.yml
ua_generic_rest_api/: ua_generic_rest_api.py
ua_generic_rest_api/tests/: test_generic_rest_api.py
